--- a/Handling Categorical Data/2. Ordinal Label Encoding Technique.ipynb
+++ b/Handling Categorical Data/2. Ordinal Label Encoding Technique.ipynb
@@ -758,6 +758,22 @@
     "data.drop(['Week Day','WeekDay Rank Replace'],axis=1,inplace=True)\n",
     "data"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Please let me know your feedback in comment section\n",
+    "#### Also, [take a look at my other notebooks](https://www.kaggle.com/rushikeshlavate/notebooks)\n",
+    "<h1 align='center' style=\"color:green;\"><u>|| Thank you ! 😀😀 ||</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
